--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "jsonwebtoken": "^9.0.2",
-    "nest-commander": "^3.17.0",
+    "nestjs-command": "^3.1.5",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
